--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,17 @@
 {
-  "name": "audio-record-button",
-  "description": "TBD",
-  "main": "index.html",
+  "name": "audio-lego",
+  "version": "0.1.0",
+  "description": "Record your mic, and play back the sample.",
+  "main": "audio-lego.html",
+  "keywords": [
+    "web-components",
+    "polymer",
+    "audio",
+    "webaudio",
+    "web-audio",
+    "mediastream",
+    "media-stream"
+  ],
   "authors": [
     "herr kaste <herr.kaste@gmail.com>"
   ],
@@ -10,11 +20,12 @@
   "ignore": [],
   "dependencies": {
     "polymer": "^1.4.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.1",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
+    "Pony": "kaste/Pony#^0.1.0"
   },
   "devDependencies": {
+    "page-visibility": "kaste/page-visibility#^0.1.0",
     "web-component-tester": "^4.2.2",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.2.5"
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.2.5",
+    "papr-toggle-button": "kaste/papr-toggle-button#^0.1.1"
   }
 }
