--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
   "extends": "eslint:recommended",
   "rules": {
     "no-console": 0,
-    "semi": [2, "always"],
+    "semi": [2, "never"],
     "no-unreachable": 2,
     "no-unexpected-multiline": 2,
     "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
